--- a/practice.html
+++ b/practice.html
@@ -8,8 +8,6 @@
 
   <body>
     <section>
-      <h1>折り返し
-        <span>地点</span>
-      </h1>
+      <h1>折り返し<span>地点</span></h1>
     </section>
   </body>
